@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members
title Class Diagram - UC-69 Send Chat Message

class "Chat Widget / Admin Chat UI" as UI <<boundary>>
class "ChatController" as Controller <<controller>>
class "ChatService" as Service <<service>>
class "ChatConversation" as ChatConversation <<domain>>
class "ChatMessage" as ChatMessage <<domain>>
class "ShoeDetail" as ShoeDetail <<domain>>

UI --> Controller : POST /chat/conversations/:id/messages
Controller --> Service : delegates
Service --> ChatConversation : uses
Service --> ChatMessage : uses
Service --> ShoeDetail : uses

note right of UI
UC-69 - Send Chat Message
Actors: Guest, User
Pre: Chat conversation đang mở
Post: Tin nhắn được gửi
end note
@enduml
